fixed descrip overflow, reverted css

--- a/css/chichomps.css
+++ b/css/chichomps.css
@@ -180,7 +180,7 @@ img {
 
   /* Initially we don't want any height, and we want the contents to be hidden */
   height: 0;
-  overflow: scroll;
+  overflow: auto;
 
   /* Set our transitions up. */
   -webkit-transition: height 0.8s;
